# TheRock

./: .benchmark-test  .gitignore  .gitmodules  .pre-commit-config.yaml  ANALYSIS_COMPLETE.md  AOCL_CLEANUP_TASK.md  BRANCH_CONFIG.json  BRANCH_FLAGS.cmake  BUILD_OPTIMIZATION_DIAGRAMS.md  BUILD_STAGE_QUICK_REFERENCE.md  BUILD_TOPOLOGY.toml  CLAUDE.md  CLEANUP_LOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  COST_CONTROL_SUMMARY.md  COST_GUIDE.md  FILTERING_EXPLAINED.md  FINAL_SUMMARY.md  FLAGS.cmake  GPU_COMPETITIVE_ANALYSIS.md  HANDOFF_INSTRUCTIONS.md  LOG_ANALYZER_ARCHITECTURE.md  LOG_ANALYZER_QUICKSTART.md  LOG_ANALYZER_README.md  LOG_ANALYZER_SEQUENCE_DIAGRAM.md  LOG_ANALYZER_SUMMARY.md  Makefile  None  OPTIMIZATION_PLAN.md  PARALLEL_STAGE_IMPLEMENTATION.md  PERFORMANCE_COMPARISON.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_START.md  README.md  RELEASES.md  ROADMAP.md  (+49 more)
comm-libs/rocshmem/: CMakeLists.txt
compiler/amd-llvm-flang/: CMakeLists.txt
compiler/amd-llvm-offload/: CMakeLists.txt
compiler/amd-llvm-offload-runtimes/: CMakeLists.txt
core/hip-remote-client/: CMakeLists.txt
core/hip-remote-client/cmake/: hip-config.cmake.in
core/hip-remote-client/src/: hip_api_device.c  hip_api_memory.c  hip_api_module.c  hip_api_stream.c  hip_client.c
core/hip-remote-client/tests/: test_basic.c
core/hip-remote-worker/: CMakeLists.txt  hip-worker.service.in
core/hip-remote-worker/src/: hip_worker_main.c  smi_worker_handlers.c  smi_worker_handlers.h
core/hipInfo-ds/: CMakeLists.txt
core/smi-remote-client/: CMakeLists.txt
core/smi-remote-client/src/: smi_client.c
core/smi-remote-client/tests/: test_smi_basic.c
core/smi-remote-client/tools/: smi-remote.c
core/wsl-rocdxg/: CMakeLists.txt  wsl_build_rocdxg.sh.in
mirage/: .gitignore  README.md  pyproject.toml
mirage/lib/sim/: single_gpu_simulator.h
mirage/native/: CMakeLists.txt
mirage/native/src/: gfx950_binary_decoder.cc  gfx950_interpreter.cc  mirage_sim_core.cc  simdojo_dispatch_harness.cc  single_gpu_simulator.cc  virtual_gpu_device.cc
mirage/native/tests/: gfx950_binary_decoder_test.cc  gfx950_interpreter_test.cc  gfx950_runtime_test.cc  instruction_catalog_test.cc  run_with_unlimited_stack.sh  simdojo_dispatch_harness_test.cc  simdojo_smoke_test.cc  single_gpu_simulator_test.cc
mirage/python/mirage/: __init__.py  control_plane.py
mirage/reports/coverage/: gfx950_support_report.json  gfx950_support_report.md
mirage/tests/: conftest.py
mirage/tests/data/: gfx950_instruction_catalog.json
mirage/tests/unit/: test_control_plane_boot.py  test_gfx950_catalog_matches_xml.py  test_import.py
mirage/tools/: generate_gfx950_isa_catalog.py
opencl/: CMakeLists.txt  artifact-opencl-cts.toml  post_hook_opencl-cts.cmake
python/therock-tools/: pyproject.toml
tests/gtest_samples/: CMakeLists.txt  README.md  quick_start.ps1  requirements.txt  sample_integration_tests.cpp  sample_math_tests.cpp  sample_string_tests.cpp  test_logging.hpp
userspace_driver/: pyproject.toml
userspace_driver/amdgpu_lite/: .gitignore  Kbuild  Makefile  amdgpu_lite.h  irq.c  main.c  memory.c  pci_setup.c  test_all.c  test_basic.c
userspace_driver/debug/: debug_dispatch.py  debug_sdma.py  debug_sdma2.py  debug_sdma3.py  debug_sdma4.py  debug_sdma5.py  debug_sdma6.py  hip_macos_hipcc_smoke.hip  hip_macos_iree_style_args.cpp  hip_macos_smoke_fast_exit.cpp  hip_macos_smoke_normal.cpp  macgpu_phase10_compute_direct.cpp
userspace_driver/kernel_driver/: .gitignore  amdgpu_mcdm.h  amdgpu_mcdm.inf  amdgpu_mcdm.sln  amdgpu_mcdm.vcxproj  ddi_device.c  ddi_escape.c  ddi_interrupt.c  ddi_memory.c  ddi_query.c  ddi_scheduling.c  ddi_stubs.c  ddi_tdr.c  driver_entry.c  sign_and_install.bat  sign_and_install.ps1
userspace_driver/macos_driver/: README.md
userspace_driver/mcdm_driver/: amdgpu_mcdm.cdf  cert_request.inf  certreq.inf  certreq_signer.inf  create_cert_chain.py
userspace_driver/python/: conftest.py  inspect_toc.py  test_amdgpu_lite_backend.py  test_debug_discovery.py  test_hw_hello.py  try_autoload_gfx.py  try_autoload_only_toc_fix.py  try_autoload_resume.py  try_combo_pptable.py  try_enable_full_smu_prep.py  try_enable_with_real_mask.py  try_enable_with_write_pptable.py  try_enables_before_autoload.py  try_full_psp_fw_load.py  try_full_smu_sequence.py  try_gmc_then_pwr_gfx.py  try_linux_order.py  try_phase10_compute_direct.py  try_phase11_macos_queue_api.py  try_phase12_amddevice_macos.py  try_phase13_noop_dispatch_macos.py  try_phase14_macos_timeline.py  try_phase15_program_noop_macos.py  try_phase9_all_pipes.py  try_phase9_bringup.py  try_phase9_compute_ring.py  try_phase9_direct_bar5.py  try_phase9_doorbell.py  try_phase9_hqd_before_mec.py  try_phase9_mec.py  try_phase9_mes.py  try_phase9_mes_enable.py  try_phase9_mes_kiq.py  try_phase9_rlc_schedulers.py  try_psp_autoload.py  try_psp_autoload_resume.py  try_pwr_gfx_with_rlc.py  try_pwr_soc_before_autoload.py  try_scpm_enable_all.py  try_smu_enable_with_agp.py  (+6 more)
userspace_driver/tests/: conftest.py  test_elf_parser.py  test_gpu_family.py  test_ioctl_structs.py  test_pm4_packets.py  test_ring_buffer.py  test_sdma_packets.py  test_topology.py
userspace_driver/wddm_driver/: .gitignore  amdgpu_wddm.h  amdgpu_wddm.inf  amdgpu_wddm.sln  amdgpu_wddm.vcxproj  check_events.ps1  check_events2.ps1  check_offsets.c  check_status.ps1  check_status2.ps1  ddi_compute.c  ddi_device.c  ddi_display.c  ddi_escape.c  ddi_interrupt.c  ddi_memory.c  ddi_present.c  ddi_query.c  ddi_scheduling.c  ddi_stubs.c  ddi_tdr.c  ddi_vidpn.c  driver_entry.c  make_cat.ps1  make_cat2.ps1  reinstall.ps1  sign_and_install.bat  sign_package.ps1  test_phys_pages.cpp
userspace_driver/wddm_lite/: build_test.bat  gpu_init.cpp  wddm_lite.cpp  wddm_lite.h  wddm_lite_test.cpp
validation/blas_smoke/: CMakeLists.txt  hipblas_gemm_smoke.cpp  hipblas_saxpy_smoke.cpp
validation/math_smoke/: CMakeLists.txt  hipfft_c2c_smoke.cpp  hiprand_uniform_smoke.cpp  hipsolver_potrf_smoke.cpp  hipsparse_spmv_smoke.cpp  rocm_combined_stack_smoke.cpp  run_macos_egpu_smokes.sh
(+2512 files in other folders)
