[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirage"
version = "0.1.0"
description = "Mirage simulator control plane and packaging scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
miragectl = "mirage.cli.miragectl:main"
miraged = "mirage.cli.miraged:main"

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
